Mobile Scroll Stuck Fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+/* html {
   overflow: hidden;
+} */
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 html.lenis,
